<resources>
    <string name="app_name">Emergency</string>

    <string name="datiPersonali">Dati personali</string>
    <string name="nomeH">Nome*</string>
    <string name="cognomeH">Cognome*</string>
    <string name="cfH">Codice fiscale*</string>
    <string name="comuneNascitaH">Comune di nascita</string>
    <string name="dataNascitaH">Data di nascita (DD/MM/YYYY)</string>
    <string name="capH">CAP</string>
    <string name="indirizzoH">Indirizzo</string>
    <string name="numeroTelH">Numero di telefono*</string>
    <string name="emailH">E-mail</string>

    <string name="crednziali">Credenziali di accesso</string>
    <string name="usernameH">Username*</string>
    <string name="pswH">Password*</string>
    <string name="vecchiaPswH"> Vecchia password*</string>
    <string name="nuovaPswH">Nuova password*</string>
    <string name="confPswH">Conferma password*</string>
    <string name="confNuovaPswH">Conferma nuova password*</string>

    <string name="login">Accedi</string>
    <string name="conf">Conferma</string>
    <string name="confModPsw">Salva modifica</string>
    <string name="registrazione">Registrati</string>

    <string name="aiutoSegnalazione">Segnala l\'emergenza!</string>
    <string name="tipoSegnalazione">Tipo di emergenza*</string>
    <string name="indirizzoSegnalazione">Invia la tua posizione per segnalare l\'emergenza*</string>
    <string name="indirizzoSegnalazione1">Indica l\'indirizzo dell\'emergenza*</string>
    <string name="mediaSegnalazione">Aggiungi media</string>
    <string name="infoPos">INFO: per eliminare una posizone premere sull\'area di testo.</string>
    <string name="descrizioneSegnalazione">Descrizione</string>
    <string name="descrizioneEmergenza">Aggiungi una descrizione dell\'emergenza</string>
    <string name="incendio">Incendio</string>
    <string name="gas">Perdita di gas</string>
    <string name="frana">Frana</string>
    <string name="altro">Altro</string>
    <string name="neve">Allerta neve</string>

    <string name="ok">Ok</string>
    <string name="elimina">Elimina</string>
    <string name="annulla">Annulla</string>
    <string name="titoloElimina">Elimina</string>
    <string name="info">INFORMAZIONE</string>

    <string name="erroreCredenziali">   Username o password errata. Riprovare.</string>
    <string name="recuperoPsw">Password dimenticata?</string>
    <string name="aiutoModificaPsw">Inserisci la vecchia password e successivamente procedi alla modifica.</string>
    <string name="aiutoNuovaPsw">Inserisci la nuova password e poi conferma.</string>

    <string name="dialog_message">La segnalazione è stata inviata con successo. Nel caso siano richieste ulteriori informazioni verrà contattato telefonicamente.</string>
    <string name="dialog_message_foto">Sei sicuro di voler eliminare la foto?</string>
    <string name="dialog_message_pos">Sei sicuro di voler eliminare la posizione?</string>
    <string name="dialog_message_login">In seguito a questo accesso l\'inserimento delle credenziali non sarà più richiesto per dare una maggiore rapidità di utilizzo dell\'applicazione.</string>
    <string name="dialog_message_recupero_psw">Riceverà un SMS al numero fornito con una password temporanea con la quale potrà accedere.</string>
</resources>
