<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <ImageView
        android:id="@+id/crea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:src="@mipmap/ic_icona"
        android:layout_weight="3"/>


    <TextView
        android:id="@+id/txtErrore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/alt"
        android:text="@string/erroreCredenziali"
        android:visibility="invisible"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1">

        <AutoCompleteTextView
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameH"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/pswLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pswH"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/linkRecuperaPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/recuperoPsw"
            android:linksClickable="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/btAccedi"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:text="@string/login"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/registrazioneUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:text="@string/registrazione"
        android:textColor="@color/colorAccent"
        android:linksClickable="true"
        android:layout_weight="0.5"/>





</LinearLayout>