<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="helpfire.emergency.Segnalazione"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tipoSegn"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/label"
            android:text="@string/tipoSegnalazione"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <!--RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"-->
                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdIncendio"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incendio"/>
                    <RadioButton
                        android:id="@+id/rdGas"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gas"/>
                    <RadioButton
                        android:id="@+id/rdFrana"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frana"/>
                    <RadioButton
                        android:id="@+id/rdNeve"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/neve"/>
                    <RadioButton
                        android:id="@+id/rdAltro"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altro"/>
                </RadioGroup>
            <!--/RelativeLayout-->
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/indirizzoSegnalazione"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/info"
            android:text="@string/infoPos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:layout_weight="3"/>

            <ImageButton
                android:id="@+id/btGetPosizione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_my_position"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/indirizzoSegnalazione1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/info"
            android:text="@string/infoPos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:layout_weight="3"/>

            <ImageButton
                android:id="@+id/btPosizione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_position"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/mediaSegnalazione"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/info"
            android:text="@string/infoMedia"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2.7">
                <LinearLayout
                    android:id="@+id/contAnteprime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_weight="2.7">

                </LinearLayout>
            </HorizontalScrollView>

            <ImageButton
                android:id="@+id/btCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_camera_dark"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/descrizioneSegnalazione"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editDescrizione" />

    </LinearLayout>
</ScrollView>