<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="helpfire.emergency.Segnalazione"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tipoSegn"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/label"
            android:textColor="@color/text_color_primary"
            android:text="@string/tipoSegnalazione"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <!--RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"-->
                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdIncendio"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incendio"/>
                    <RadioButton
                        android:id="@+id/rdGas"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gas"/>
                    <RadioButton
                        android:id="@+id/rdFrana"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frana"/>
                    <RadioButton
                        android:id="@+id/rdNeve"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/neve"/>
                    <RadioButton
                        android:id="@+id/rdAltro"
                        android:textSize="@dimen/opzion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altro"/>
                </RadioGroup>
            <!--/RelativeLayout-->
        </LinearLayout>
        <Button
            android:id="@+id/btPosizione2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_my_position"
            android:textAllCaps="false"
            android:background="@drawable/button_segnalazione"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/indirizzoSegnalazione"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/textLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/info"
                android:text="@string/infoPos"/>


        </LinearLayout>

        <Button
            android:id="@+id/btGetPosizione2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_position"
            android:textAllCaps="false"
            android:background="@drawable/button_segnalazione"
            android:textSize="@dimen/label"
            android:textStyle="bold"
            android:text="@string/indirizzoSegnalazione1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/info"
                android:text="@string/infoPos"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/btCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_segnalazione"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_camera_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/label"
                    android:textColor="@color/text_color_primary"
                    android:textStyle="bold"
                    android:text="@string/mediaSegnalazione"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info"
                    android:text="@string/infoMedia"/>


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2.7">
                    <LinearLayout
                        android:id="@+id/contAnteprime"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_weight="2.7">

                    </LinearLayout>
                </HorizontalScrollView>
</LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textSize="@dimen/label"
            android:textColor="@color/text_color_primary"
            android:textStyle="bold"
            android:text="@string/descrizioneSegnalazione"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editDescrizione" />

    </LinearLayout>
</ScrollView>