<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TextView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aiutoModificaPsw"/-->

    <android.support.design.widget.TextInputLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/vecchiaPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vecchiaPswH"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/nuovaPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pswH"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/confPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confPswH"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btAnnullaModifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/annulla"/>

        <Button
            android:id="@+id/btConfermaPsw"
            android:paddingRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/confModPsw"/>

    </LinearLayout>

</LinearLayout>